# Benchmark-Agent

./: README.md  generate_benchmark.py  setup.cfg
benchmark_agent/executor/: sample_realization.py  verification.py
benchmark_agent/planner/: allocation_agent.py  design_agent.py  grounding_agent.py
data/: data.md
data/dataset_cards/: 076fdf72_card.json  0d20e992_card.json  0fa3ee6d_card.json  2681e85c_card.json  2d36aa6b_card.json  37a67448_card.json  5f3dbd05_card.json  6f1bd1c5_card.json  791bc8ca_card.json  7fb63e11_card.json  9155fd9c_card.json  91f29c38_card.json  a538c57a_card.json  b06e6da3_card.json  c78e5c5c_card.json  ca4f9ec3_card.json  cc0d075c_card.json  f219959e_card.json
tools/executor_tools/: run_pure_tools.py  tools.md  transformation_tools_rollback.py
tools/executor_tools/implementations/: audio_tools.py  image_tools.py  (+1 more)
tools/shared/: build_gen_input.py  choice_question.py  export_results.py  media_paths.py  primitives.py  tool_sanitizer.py
topics/: topic_02.json  topic_03.json
user_queries/: user_querie_01.json
utils/: agent_utils.py  benchmark_flow.py  constant.py  core.py  fn_call_converter.py  llm_caller.py  logger.py  model_config.py  registry.py  util.py
utils/audio_processing/: add_noise.py  xtts_batch.py
utils/build_dataset_cards/: built_dataset_card.config.json  built_dataset_card.py  dataset_card_tools.py
utils/resources/: agent_cache_config.yaml  dataset_cards.yaml  image_root_path.json  models.yaml  scenario.yaml  tasks.yaml  tools.yaml
utils/schema/: dataset_card.py  metadata_core.py  pure_tools_structure.py
(+27 files in other folders)
