[metadata]
name = benchmark-agent
version = 0.1.0
author = CUHK
description = Multi-agent benchmark generation pipeline for image and multi-modal evaluation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
package_dir =
    = .
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    openai>=1.52.0
    litellm==1.55.0
    pydantic
    PyYAML
    python-dotenv
    rich
    tqdm
    tiktoken
    tenacity
    httpx
    requests
    inquirer
    pydub
    numpy
    Pillow
    pytest
    pre-commit
    gradio

[options.packages.find]
where = .
include = benchmark_agent*, tools*, utils*

python_requires = >=3.11

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3
